@@ -3126,6 +3126,11 @@ password=P@ssW0rd!
             </tr>
             </thead>
             <tbody>
+          <tr>
+                <td>correctForServerTime</td>
+                <td>No</td>
+                <td>Should CruiseControl correct for time differences between the Perforce server and the CruiseControl server? Defaults to true.</td>
+            </tr>
             <tr>
                 <td>port</td>
                 <td>Yes</td>
